--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -11,14 +11,16 @@ env:
   PIPELINE_USER_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
   SAM_TEMPLATE: template.yaml
   TESTING_STACK_NAME: log-subscriber-test
-  TESTING_PIPELINE_EXECUTION_ROLE: arn:aws:iam::${{ secrets.AWS_ACCOUNT_ID }}:role/aws-sam-cli-managed-log-subs-PipelineExecutionRole-25DQEU2ESEZB
-  TESTING_CLOUDFORMATION_EXECUTION_ROLE: arn:aws:iam::${{ secrets.AWS_ACCOUNT_ID }}:role/aws-sam-cli-managed-log-s-CloudFormationExecutionR-I1FE17UFE5C3
-  TESTING_ARTIFACTS_BUCKET: aws-sam-cli-managed-log-subscribe-artifactsbucket-1vnmb3ax14y27
+  TESTING_PIPELINE_EXECUTION_ROLE: arn:aws:iam::${{ secrets.AWS_ACCOUNT_ID }}:role/dbowland-pipeline-test
+  TESTING_CLOUDFORMATION_EXECUTION_ROLE: arn:aws:iam::${{ secrets.AWS_ACCOUNT_ID }}:role/dbowland-cloudformation-test
+  TESTING_ARTIFACTS_BUCKET_EAST_1: dbowland-lambda-east-1-test
+  TESTING_ARTIFACTS_BUCKET_EAST_2: dbowland-lambda-east-2-test
   TESTING_REGION: ${{ secrets.AWS_REGION }}
   PROD_STACK_NAME: log-subscriber
-  PROD_PIPELINE_EXECUTION_ROLE: arn:aws:iam::${{ secrets.AWS_ACCOUNT_ID }}:role/aws-sam-cli-managed-log-subs-PipelineExecutionRole-11EN3RI16N8WF
-  PROD_CLOUDFORMATION_EXECUTION_ROLE: arn:aws:iam::${{ secrets.AWS_ACCOUNT_ID }}:role/aws-sam-cli-managed-log-s-CloudFormationExecutionR-ZSEGV8MQJ74D
-  PROD_ARTIFACTS_BUCKET: aws-sam-cli-managed-log-subscribe-artifactsbucket-12v2ui1qw5aag
+  PROD_PIPELINE_EXECUTION_ROLE: arn:aws:iam::${{ secrets.AWS_ACCOUNT_ID }}:role/dbowland-pipeline
+  PROD_CLOUDFORMATION_EXECUTION_ROLE: arn:aws:iam::${{ secrets.AWS_ACCOUNT_ID }}:role/dbowland-cloudformation
+  PROD_ARTIFACTS_BUCKET_EAST_1: dbowland-lambda-east-1
+  PROD_ARTIFACTS_BUCKET_EAST_2: dbowland-lambda-east-2
   PROD_REGION: ${{ secrets.AWS_REGION }}
 
 jobs:
@@ -42,8 +44,6 @@ jobs:
 
   build-and-deploy-feature:
     name: Deploy feature branch
-    # this stage is triggered only for feature branches (feature*),
-    # which will build the stack and deploy to a stack named with branch name.
     if: startsWith(github.ref, 'refs/heads/feature')
     needs: [test]
     runs-on: ubuntu-latest
@@ -81,7 +81,8 @@ jobs:
           sam deploy --stack-name ${TESTING_STACK_NAME} \
             --capabilities CAPABILITY_IAM \
             --region us-east-1 \
-            --s3-bucket ${TESTING_ARTIFACTS_BUCKET} \
+            --s3-bucket ${TESTING_ARTIFACTS_BUCKET_EAST_1} \
+            --s3-prefix log-subscriber-test \
             --no-fail-on-empty-changeset \
             --role-arn ${TESTING_CLOUDFORMATION_EXECUTION_ROLE} \
             --parameter-overrides 'PhoneNumber=${{ secrets.PHONE_NUMBER }} Environment=test'
@@ -91,7 +92,8 @@ jobs:
           sam deploy --stack-name ${TESTING_STACK_NAME} \
             --capabilities CAPABILITY_IAM \
             --region us-east-2 \
-            --s3-bucket ${TESTING_ARTIFACTS_BUCKET} \
+            --s3-bucket ${TESTING_ARTIFACTS_BUCKET_EAST_2} \
+            --s3-prefix log-subscriber-test \
             --no-fail-on-empty-changeset \
             --role-arn ${TESTING_CLOUDFORMATION_EXECUTION_ROLE} \
             --parameter-overrides 'PhoneNumber=${{ secrets.PHONE_NUMBER }} Environment=test'
@@ -134,10 +136,10 @@ jobs:
       - name: Upload artifacts to testing artifact buckets
         run: |
           sam package \
-            --s3-bucket ${TESTING_ARTIFACTS_BUCKET} \
+            --s3-bucket ${TESTING_ARTIFACTS_BUCKET_EAST_2} \
+            --s3-prefix log-subscriber-test \
             --region ${TESTING_REGION} \
             --output-template-file packaged-testing.yaml
-
       - uses: actions/upload-artifact@v2
         with:
           name: packaged-testing.yaml
@@ -157,7 +159,8 @@ jobs:
       - name: Upload artifacts to production artifact buckets
         run: |
           sam package \
-            --s3-bucket ${PROD_ARTIFACTS_BUCKET} \
+            --s3-bucket ${PROD_ARTIFACTS_BUCKET_EAST_2} \
+            --s3-prefix log-subscriber \
             --region ${PROD_REGION} \
             --output-template-file packaged-prod.yaml
 
@@ -197,7 +200,8 @@ jobs:
             --template packaged-testing.yaml \
             --capabilities CAPABILITY_IAM \
             --region us-east-1 \
-            --s3-bucket ${TESTING_ARTIFACTS_BUCKET} \
+            --s3-bucket ${TESTING_ARTIFACTS_BUCKET_EAST_1} \
+            --s3-prefix log-subscriber-test \
             --no-fail-on-empty-changeset \
             --role-arn ${TESTING_CLOUDFORMATION_EXECUTION_ROLE} \
             --parameter-overrides 'PhoneNumber=${{ secrets.PHONE_NUMBER }} Environment=test'
@@ -207,7 +211,8 @@ jobs:
             --template packaged-testing.yaml \
             --capabilities CAPABILITY_IAM \
             --region us-east-2 \
-            --s3-bucket ${TESTING_ARTIFACTS_BUCKET} \
+            --s3-bucket ${TESTING_ARTIFACTS_BUCKET_EAST_2} \
+            --s3-prefix log-subscriber-test \
             --no-fail-on-empty-changeset \
             --role-arn ${TESTING_CLOUDFORMATION_EXECUTION_ROLE} \
             --parameter-overrides 'PhoneNumber=${{ secrets.PHONE_NUMBER }} Environment=test'
@@ -243,7 +248,8 @@ jobs:
             --template packaged-prod.yaml \
             --capabilities CAPABILITY_IAM \
             --region us-east-1 \
-            --s3-bucket ${PROD_ARTIFACTS_BUCKET} \
+            --s3-bucket ${PROD_ARTIFACTS_BUCKET_EAST_1} \
+            --s3-prefix log-subscriber \
             --no-fail-on-empty-changeset \
             --role-arn ${PROD_CLOUDFORMATION_EXECUTION_ROLE} \
             --parameter-overrides 'PhoneNumber=${{ secrets.PHONE_NUMBER }}'
@@ -253,7 +259,8 @@ jobs:
             --template packaged-prod.yaml \
             --capabilities CAPABILITY_IAM \
             --region us-east-2 \
-            --s3-bucket ${PROD_ARTIFACTS_BUCKET} \
+            --s3-bucket ${PROD_ARTIFACTS_BUCKET_EAST_2} \
+            --s3-prefix log-subscriber \
             --no-fail-on-empty-changeset \
             --role-arn ${PROD_CLOUDFORMATION_EXECUTION_ROLE} \
             --parameter-overrides 'PhoneNumber=${{ secrets.PHONE_NUMBER }}'
