--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -11,14 +11,16 @@ env:
   PIPELINE_USER_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
   SAM_TEMPLATE: template.yaml
   TESTING_STACK_NAME: log-subscriber-test
-  TESTING_PIPELINE_EXECUTION_ROLE: arn:aws:iam::${{ secrets.AWS_ACCOUNT_ID }}:role/aws-sam-cli-managed-log-subs-PipelineExecutionRole-25DQEU2ESEZB
-  TESTING_CLOUDFORMATION_EXECUTION_ROLE: arn:aws:iam::${{ secrets.AWS_ACCOUNT_ID }}:role/aws-sam-cli-managed-log-s-CloudFormationExecutionR-I1FE17UFE5C3
-  TESTING_ARTIFACTS_BUCKET: aws-sam-cli-managed-log-subscribe-artifactsbucket-1vnmb3ax14y27
+  TESTING_PIPELINE_EXECUTION_ROLE: arn:aws:iam::${{ secrets.AWS_ACCOUNT_ID }}:role/dbowland-pipeline-test
+  TESTING_CLOUDFORMATION_EXECUTION_ROLE: arn:aws:iam::${{ secrets.AWS_ACCOUNT_ID }}:role/dbowland-cloudformation-test
+  TESTING_ARTIFACTS_BUCKET_EAST_1: dbowland-lambda-east-1-test
+  TESTING_ARTIFACTS_BUCKET_EAST_2: dbowland-lambda-east-2-test
   TESTING_REGION: ${{ secrets.AWS_REGION }}
   PROD_STACK_NAME: log-subscriber
-  PROD_PIPELINE_EXECUTION_ROLE: arn:aws:iam::${{ secrets.AWS_ACCOUNT_ID }}:role/aws-sam-cli-managed-log-subs-PipelineExecutionRole-11EN3RI16N8WF
-  PROD_CLOUDFORMATION_EXECUTION_ROLE: arn:aws:iam::${{ secrets.AWS_ACCOUNT_ID }}:role/aws-sam-cli-managed-log-s-CloudFormationExecutionR-ZSEGV8MQJ74D
-  PROD_ARTIFACTS_BUCKET: aws-sam-cli-managed-log-subscribe-artifactsbucket-12v2ui1qw5aag
+  PROD_PIPELINE_EXECUTION_ROLE: arn:aws:iam::${{ secrets.AWS_ACCOUNT_ID }}:role/dbowland-pipeline
+  PROD_CLOUDFORMATION_EXECUTION_ROLE: arn:aws:iam::${{ secrets.AWS_ACCOUNT_ID }}:role/dbowland-cloudformation
+  PROD_ARTIFACTS_BUCKET_EAST_1: dbowland-lambda-east-1
+  PROD_ARTIFACTS_BUCKET_EAST_2: dbowland-lambda-east-2
   PROD_REGION: ${{ secrets.AWS_REGION }}
 
 jobs:
@@ -42,8 +44,6 @@ jobs:
 
   build-and-deploy-feature:
     name: Deploy feature branch
-    # this stage is triggered only for feature branches (feature*),
-    # which will build the stack and deploy to a stack named with branch name.
     if: startsWith(github.ref, 'refs/heads/feature')
     needs: [test]
     runs-on: ubuntu-latest
@@ -81,7 +81,8 @@ jobs:
           sam deploy --stack-name ${TESTING_STACK_NAME} \
             --capabilities CAPABILITY_IAM \
             --region us-east-1 \
-            --s3-bucket ${TESTING_ARTIFACTS_BUCKET} \
+            --s3-bucket ${TESTING_ARTIFACTS_BUCKET_EAST_1} \
+            --s3-prefix log-subscriber-test \
             --no-fail-on-empty-changeset \
             --role-arn ${TESTING_CLOUDFORMATION_EXECUTION_ROLE} \
             --parameter-overrides 'PhoneNumber=${{ secrets.PHONE_NUMBER }} Environment=test'
@@ -91,7 +92,8 @@ jobs:
           sam deploy --stack-name ${TESTING_STACK_NAME} \
             --capabilities CAPABILITY_IAM \
             --region us-east-2 \
-            --s3-bucket ${TESTING_ARTIFACTS_BUCKET} \
+            --s3-bucket ${TESTING_ARTIFACTS_BUCKET_EAST_2} \
+            --s3-prefix log-subscriber-test \
             --no-fail-on-empty-changeset \
             --role-arn ${TESTING_CLOUDFORMATION_EXECUTION_ROLE} \
             --parameter-overrides 'PhoneNumber=${{ secrets.PHONE_NUMBER }} Environment=test'
@@ -131,17 +133,28 @@ jobs:
           role-duration-seconds: 3600
           role-skip-session-tagging: true
 
-      - name: Upload artifacts to testing artifact buckets
+      - name: Upload artifacts to east-1 testing artifact buckets
         run: |
           sam package \
-            --s3-bucket ${TESTING_ARTIFACTS_BUCKET} \
+            --s3-bucket ${TESTING_ARTIFACTS_BUCKET_EAST_1} \
+            --s3-prefix log-subscriber-test \
             --region ${TESTING_REGION} \
-            --output-template-file packaged-testing.yaml
-
+            --output-template-file packaged-testing-east-1.yaml
       - uses: actions/upload-artifact@v2
         with:
-          name: packaged-testing.yaml
-          path: packaged-testing.yaml
+          name: packaged-testing-east-1.yaml
+          path: packaged-testing-east-1.yaml
+      - name: Upload artifacts to east-2 testing artifact buckets
+        run: |
+          sam package \
+            --s3-bucket ${TESTING_ARTIFACTS_BUCKET_EAST_2} \
+            --s3-prefix log-subscriber-test \
+            --region ${TESTING_REGION} \
+            --output-template-file packaged-testing-east-2.yaml
+      - uses: actions/upload-artifact@v2
+        with:
+          name: packaged-testing-east-2.yaml
+          path: packaged-testing-east-2.yaml
 
       - name: Assume the prod pipeline user role
         uses: aws-actions/configure-aws-credentials@v1
@@ -154,17 +167,28 @@ jobs:
           role-duration-seconds: 3600
           role-skip-session-tagging: true
 
-      - name: Upload artifacts to production artifact buckets
+      - name: Upload artifacts to east-1 production artifact buckets
         run: |
           sam package \
-            --s3-bucket ${PROD_ARTIFACTS_BUCKET} \
+            --s3-bucket ${PROD_ARTIFACTS_BUCKET_EAST_1} \
+            --s3-prefix log-subscriber \
             --region ${PROD_REGION} \
-            --output-template-file packaged-prod.yaml
-
+            --output-template-file packaged-prod-east-1.yaml
       - uses: actions/upload-artifact@v2
         with:
-          name: packaged-prod.yaml
-          path: packaged-prod.yaml
+          name: packaged-prod-east-1.yaml
+          path: packaged-prod-east-1.yaml
+      - name: Upload artifacts to east-2 production artifact buckets
+        run: |
+          sam package \
+            --s3-bucket ${PROD_ARTIFACTS_BUCKET_EAST_2} \
+            --s3-prefix log-subscriber \
+            --region ${PROD_REGION} \
+            --output-template-file packaged-prod-east-2.yaml
+      - uses: actions/upload-artifact@v2
+        with:
+          name: packaged-prod-east-2.yaml
+          path: packaged-prod-east-2.yaml
 
   deploy-testing:
     name: Deploy to test
@@ -178,7 +202,10 @@ jobs:
       - uses: aws-actions/setup-sam@v1
       - uses: actions/download-artifact@v2
         with:
-          name: packaged-testing.yaml
+          name: packaged-testing-east-1.yaml
+      - uses: actions/download-artifact@v2
+        with:
+          name: packaged-testing-east-2.yaml
 
       - name: Assume the testing pipeline user role
         uses: aws-actions/configure-aws-credentials@v1
@@ -194,20 +221,22 @@ jobs:
       - name: Deploy to us-east-1 testing account
         run: |
           sam deploy --stack-name ${TESTING_STACK_NAME} \
-            --template packaged-testing.yaml \
+            --template packaged-testing-east-1.yaml \
             --capabilities CAPABILITY_IAM \
             --region us-east-1 \
-            --s3-bucket ${TESTING_ARTIFACTS_BUCKET} \
+            --s3-bucket ${TESTING_ARTIFACTS_BUCKET_EAST_1} \
+            --s3-prefix log-subscriber-test \
             --no-fail-on-empty-changeset \
             --role-arn ${TESTING_CLOUDFORMATION_EXECUTION_ROLE} \
             --parameter-overrides 'PhoneNumber=${{ secrets.PHONE_NUMBER }} Environment=test'
       - name: Deploy to us-east-2 testing account
         run: |
           sam deploy --stack-name ${TESTING_STACK_NAME} \
-            --template packaged-testing.yaml \
+            --template packaged-testing-east-2.yaml \
             --capabilities CAPABILITY_IAM \
             --region us-east-2 \
-            --s3-bucket ${TESTING_ARTIFACTS_BUCKET} \
+            --s3-bucket ${TESTING_ARTIFACTS_BUCKET_EAST_2} \
+            --s3-prefix log-subscriber-test \
             --no-fail-on-empty-changeset \
             --role-arn ${TESTING_CLOUDFORMATION_EXECUTION_ROLE} \
             --parameter-overrides 'PhoneNumber=${{ secrets.PHONE_NUMBER }} Environment=test'
@@ -224,7 +253,10 @@ jobs:
       - uses: aws-actions/setup-sam@v1
       - uses: actions/download-artifact@v2
         with:
-          name: packaged-prod.yaml
+          name: packaged-prod-east-1.yaml
+      - uses: actions/download-artifact@v2
+        with:
+          name: packaged-prod-east-2.yaml
 
       - name: Assume the prod pipeline user role
         uses: aws-actions/configure-aws-credentials@v1
@@ -240,20 +272,22 @@ jobs:
       - name: Deploy to us-east-1 production account
         run: |
           sam deploy --stack-name ${PROD_STACK_NAME} \
-            --template packaged-prod.yaml \
+            --template packaged-prod-east-1.yaml \
             --capabilities CAPABILITY_IAM \
             --region us-east-1 \
-            --s3-bucket ${PROD_ARTIFACTS_BUCKET} \
+            --s3-bucket ${PROD_ARTIFACTS_BUCKET_EAST_1} \
+            --s3-prefix log-subscriber \
             --no-fail-on-empty-changeset \
             --role-arn ${PROD_CLOUDFORMATION_EXECUTION_ROLE} \
             --parameter-overrides 'PhoneNumber=${{ secrets.PHONE_NUMBER }}'
       - name: Deploy to us-east-2 production account
         run: |
           sam deploy --stack-name ${PROD_STACK_NAME} \
-            --template packaged-prod.yaml \
+            --template packaged-prod-east-2.yaml \
             --capabilities CAPABILITY_IAM \
             --region us-east-2 \
-            --s3-bucket ${PROD_ARTIFACTS_BUCKET} \
+            --s3-bucket ${PROD_ARTIFACTS_BUCKET_EAST_2} \
+            --s3-prefix log-subscriber \
             --no-fail-on-empty-changeset \
             --role-arn ${PROD_CLOUDFORMATION_EXECUTION_ROLE} \
             --parameter-overrides 'PhoneNumber=${{ secrets.PHONE_NUMBER }}'
