--- a/template.yaml
+++ b/template.yaml
@@ -20,9 +20,11 @@ Parameters:
 Mappings:
   EnvironmentMap:
     prod:
+      project: log-subscriber
       smsApiKeyName: sms-qu-ApiAp-0vvm2O9lZAEs
       smsApiUrl: https://sms-queue-api.dbowland.com/v1
     test:
+      project: log-subscriber-test
       smsApiKeyName: sms-qu-ApiAp-3Ox0KVJulSZ0
       smsApiUrl: https://sms-queue-api.bowland.link/v1
 
@@ -33,7 +35,6 @@ Resources:
     Type: AWS::Serverless::Function
     Properties:
       Description: Processes error messages from log groups
-      Runtime: nodejs14.x
       Architectures:
         - x86_64
       Handler: handlers/log-group-processor.logGroupProcessorHandler
@@ -43,8 +44,8 @@ Resources:
           SMS_API_KEY_NAME: !FindInMap [EnvironmentMap, !Ref Environment, smsApiKeyName]
           SMS_API_URL: !FindInMap [EnvironmentMap, !Ref Environment, smsApiUrl]
           SMS_TO_PHONE_NUMBER: !Ref PhoneNumber
+      FunctionName: !FindInMap [EnvironmentMap, !Ref Environment, project]
       MemorySize: 128
-      Timeout: 60
       Policies:
         # Give Lambda basic execution Permission
         - AWSLambdaBasicExecutionRole
@@ -55,6 +56,8 @@ Resources:
                 - 'apigateway:GET'
               Effect: Allow
               Resource: 'arn:aws:apigateway:us-east-1::/apikeys'
+      Runtime: nodejs14.x
+      Timeout: 60
 
   CloudWatchLambdaInvokePermission:
     Type: AWS::Lambda::Permission
