Implement axios-retry

--- a/package.json
+++ b/package.json
@@ -14,9 +14,30 @@
     "url": "https://github.com/davidbowland/log-subscriber/issues"
   },
   "homepage": "https://github.com/davidbowland/log-subscriber#readme",
+  "scripts": {
+    "build": "npm run clean && tsc && cp package*.json dist/ && cd dist/ && HUSKY=0 NODE_ENV=production npm ci",
+    "clean": "rm -rf dist coverage && NODE_ENV=test npm ci",
+    "deploy": "npm run build && ./scripts/deploy.sh",
+    "lint": "prettier --write . && eslint --fix . --resolve-plugins-relative-to .",
+    "prepare": "if [ \"$HUSKY\" != \"0\" ]; then husky install ; fi",
+    "start": "npm run build && npm run quick-start",
+    "quick-start": "tsc && HUSKY=0 sam build && sam local invoke --event events/event-subscription.json",
+    "test": "npm run lint && jest --colors"
+  },
+  "lint-staged": {
+    "**/*.{js,jsx,ts,tsx}": [
+      "prettier --write --ignore-unknown",
+      "eslint --resolve-plugins-relative-to . --fix",
+      "jest --colors --findRelatedTests --coverageThreshold '{}'"
+    ],
+    "**/*": [
+      "prettier --write --ignore-unknown"
+    ]
+  },
   "dependencies": {
     "aws-sdk": "^2.1046.0",
-    "axios": "^0.25.0"
+    "axios": "^0.25.0",
+    "axios-retry": "^3.2.4"
   },
   "devDependencies": {
     "@babel/core": "^7.16.5",
@@ -38,25 +59,5 @@
     "prettier": "^2.5.1",
     "ts-node": "^10.4.0",
     "typescript": "^4.5.4"
-  },
-  "scripts": {
-    "build": "npm run clean && tsc && cp package*.json dist/ && cd dist/ && HUSKY=0 NODE_ENV=production npm ci",
-    "clean": "rm -rf dist coverage && NODE_ENV=test npm ci",
-    "deploy": "npm run build && ./scripts/deploy.sh",
-    "lint": "prettier --write . && eslint --fix . --resolve-plugins-relative-to .",
-    "prepare": "if [ \"$HUSKY\" != \"0\" ]; then husky install ; fi",
-    "start": "npm run build && npm run quick-start",
-    "quick-start": "tsc && HUSKY=0 sam build && sam local invoke --event events/event-subscription.json",
-    "test": "npm run lint && jest --colors"
-  },
-  "lint-staged": {
-    "**/*.{js,jsx,ts,tsx}": [
-      "prettier --write --ignore-unknown",
-      "eslint --resolve-plugins-relative-to . --fix",
-      "jest --colors --findRelatedTests --coverageThreshold '{}'"
-    ],
-    "**/*": [
-      "prettier --write --ignore-unknown"
-    ]
   }
 }
