--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "@types/aws-lambda": "^8.10.88",
     "@types/escape-html": "^1.0.1",
     "@types/jest": "^27.0.3",
+    "@types/node": "^17.0.21",
     "@typescript-eslint/eslint-plugin": "^5.7.0",
     "@typescript-eslint/parser": "^5.7.0",
     "babel-jest": "^27.4.5",
