--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -10,12 +10,14 @@ env:
   PIPELINE_USER_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
   PIPELINE_USER_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
   SAM_TEMPLATE: template.yaml
+  TESTING_SMS_API_KEY: ${{ secrets.TESTING_SMS_API_KEY }}
   TESTING_STACK_NAME: log-subscriber-test
   TESTING_PIPELINE_EXECUTION_ROLE: arn:aws:iam::${{ secrets.AWS_ACCOUNT_ID }}:role/dbowland-pipeline-test
   TESTING_CLOUDFORMATION_EXECUTION_ROLE: arn:aws:iam::${{ secrets.AWS_ACCOUNT_ID }}:role/dbowland-cloudformation-test
   TESTING_ARTIFACTS_BUCKET_EAST_1: dbowland-lambda-east-1-test
   TESTING_ARTIFACTS_BUCKET_EAST_2: dbowland-lambda-east-2-test
   TESTING_REGION: ${{ secrets.AWS_REGION }}
+  PROD_SMS_API_KEY: ${{ secrets.PROD_SMS_API_KEY }}
   PROD_STACK_NAME: log-subscriber
   PROD_PIPELINE_EXECUTION_ROLE: arn:aws:iam::${{ secrets.AWS_ACCOUNT_ID }}:role/dbowland-pipeline
   PROD_CLOUDFORMATION_EXECUTION_ROLE: arn:aws:iam::${{ secrets.AWS_ACCOUNT_ID }}:role/dbowland-cloudformation
@@ -85,7 +87,7 @@ jobs:
             --s3-prefix log-subscriber-test \
             --no-fail-on-empty-changeset \
             --role-arn ${TESTING_CLOUDFORMATION_EXECUTION_ROLE} \
-            --parameter-overrides 'PhoneNumber=${{ secrets.PHONE_NUMBER }} Environment=test'
+            --parameter-overrides "Environment=test PhoneNumber=${{ secrets.PHONE_NUMBER }} SmsApiKey=${TESTING_SMS_API_KEY}"
       - name: Deploy to feature stack in the us-east-2 testing account
         shell: bash
         run: |
@@ -96,7 +98,7 @@ jobs:
             --s3-prefix log-subscriber-test \
             --no-fail-on-empty-changeset \
             --role-arn ${TESTING_CLOUDFORMATION_EXECUTION_ROLE} \
-            --parameter-overrides 'PhoneNumber=${{ secrets.PHONE_NUMBER }} Environment=test'
+            --parameter-overrides "Environment=test PhoneNumber=${{ secrets.PHONE_NUMBER }} SmsApiKey=${TESTING_SMS_API_KEY}"
 
   build-and-package:
     name: Build and package lambda
@@ -228,7 +230,7 @@ jobs:
             --s3-prefix log-subscriber-test \
             --no-fail-on-empty-changeset \
             --role-arn ${TESTING_CLOUDFORMATION_EXECUTION_ROLE} \
-            --parameter-overrides 'PhoneNumber=${{ secrets.PHONE_NUMBER }} Environment=test'
+            --parameter-overrides "Environment=test PhoneNumber=${{ secrets.PHONE_NUMBER }} SmsApiKey=${TESTING_SMS_API_KEY}"
       - name: Deploy to us-east-2 testing account
         run: |
           sam deploy --stack-name ${TESTING_STACK_NAME} \
@@ -239,7 +241,7 @@ jobs:
             --s3-prefix log-subscriber-test \
             --no-fail-on-empty-changeset \
             --role-arn ${TESTING_CLOUDFORMATION_EXECUTION_ROLE} \
-            --parameter-overrides 'PhoneNumber=${{ secrets.PHONE_NUMBER }} Environment=test'
+            --parameter-overrides "Environment=test PhoneNumber=${{ secrets.PHONE_NUMBER }} SmsApiKey=${TESTING_SMS_API_KEY}"
 
   deploy-prod:
     name: Deploy to production
@@ -279,7 +281,7 @@ jobs:
             --s3-prefix log-subscriber \
             --no-fail-on-empty-changeset \
             --role-arn ${PROD_CLOUDFORMATION_EXECUTION_ROLE} \
-            --parameter-overrides 'PhoneNumber=${{ secrets.PHONE_NUMBER }}'
+            --parameter-overrides "PhoneNumber=${{ secrets.PHONE_NUMBER }} SmsApiKey=${PROD_SMS_API_KEY}"
       - name: Deploy to us-east-2 production account
         run: |
           sam deploy --stack-name ${PROD_STACK_NAME} \
@@ -290,7 +292,7 @@ jobs:
             --s3-prefix log-subscriber \
             --no-fail-on-empty-changeset \
             --role-arn ${PROD_CLOUDFORMATION_EXECUTION_ROLE} \
-            --parameter-overrides 'PhoneNumber=${{ secrets.PHONE_NUMBER }}'
+            --parameter-overrides "PhoneNumber=${{ secrets.PHONE_NUMBER }} SmsApiKey=${PROD_SMS_API_KEY}"
 
   bump:
     name: Bump the version number and tag the commit
