--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "prepare": "if [ \"$NODE_ENV\" != \"production\" ]; then husky install ; fi",
     "start": "npm run build && npm run quick-start",
     "quick-start": "tsc && ./scripts/runLocal.sh",
-    "test": "jest --colors"
+    "test": "jest --colors",
+    "typecheck": "tsc --noEmit"
   },
   "lint-staged": {
     "**/*.{js,jsx,ts,tsx}": [
@@ -35,30 +36,31 @@
     ]
   },
   "dependencies": {
-    "aws-sdk": "^2.1152.0",
+    "aws-sdk": "^2.1167.0",
+    "aws-xray-sdk-core": "^3.3.6",
     "axios": "^0.27.2",
-    "axios-retry": "^3.2.5"
+    "axios-retry": "^3.3.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.18.2",
-    "@babel/preset-env": "^7.18.2",
-    "@babel/preset-typescript": "^7.17.12",
-    "@types/aws-lambda": "^8.10.100",
+    "@babel/core": "^7.18.6",
+    "@babel/preset-env": "^7.18.6",
+    "@babel/preset-typescript": "^7.18.6",
+    "@types/aws-lambda": "^8.10.101",
     "@types/escape-html": "^1.0.2",
-    "@types/jest": "^28.1.1",
-    "@types/node": "^17.0.41",
-    "@typescript-eslint/eslint-plugin": "^5.27.1",
-    "@typescript-eslint/parser": "^5.27.1",
-    "babel-jest": "^28.1.1",
-    "eslint": "^8.17.0",
+    "@types/jest": "^28.1.4",
+    "@types/node": "^18.0.1",
+    "@typescript-eslint/eslint-plugin": "^5.30.5",
+    "@typescript-eslint/parser": "^5.30.5",
+    "babel-jest": "^28.1.2",
+    "eslint": "^8.19.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-jest": "^26.5.3",
     "husky": "^8.0.1",
-    "jest": "^28.1.1",
-    "lint-staged": "^13.0.1",
-    "msw": "^0.42.1",
-    "prettier": "^2.6.2",
-    "ts-node": "^10.8.1",
-    "typescript": "^4.7.3"
+    "jest": "^28.1.2",
+    "lint-staged": "^13.0.3",
+    "msw": "^0.43.0",
+    "prettier": "^2.7.1",
+    "ts-node": "^10.8.2",
+    "typescript": "^4.7.4"
   }
 }
