--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "start": "npm run build && npm run quick-start",
     "quick-start": "tsc && ./scripts/runLocal.sh",
     "test": "jest --colors",
-    "typecheck": "tsc --noEmit"
+    "typecheck": "tsc --noEmit",
+    "update": "ncu -u && npm i && npm audit fix --audit-level=none && npm run test && npm dedupe"
   },
   "lint-staged": {
     "**/*.{js,jsx,ts,tsx}": [
@@ -36,31 +37,31 @@
     ]
   },
   "dependencies": {
-    "aws-sdk": "^2.1167.0",
-    "aws-xray-sdk-core": "^3.3.6",
-    "axios": "^0.27.2",
+    "aws-sdk": "^2.1231.0",
+    "aws-xray-sdk-core": "^3.3.8",
+    "axios": "^1.1.2",
     "axios-retry": "^3.3.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.18.6",
-    "@babel/preset-env": "^7.18.6",
+    "@babel/core": "^7.19.3",
+    "@babel/preset-env": "^7.19.3",
     "@babel/preset-typescript": "^7.18.6",
-    "@types/aws-lambda": "^8.10.101",
+    "@types/aws-lambda": "^8.10.106",
     "@types/escape-html": "^1.0.2",
-    "@types/jest": "^28.1.4",
-    "@types/node": "^18.0.1",
-    "@typescript-eslint/eslint-plugin": "^5.30.5",
-    "@typescript-eslint/parser": "^5.30.5",
-    "babel-jest": "^28.1.2",
-    "eslint": "^8.19.0",
+    "@types/jest": "^29.1.2",
+    "@types/node": "^18.8.3",
+    "@typescript-eslint/eslint-plugin": "^5.39.0",
+    "@typescript-eslint/parser": "^5.39.0",
+    "babel-jest": "^29.1.2",
+    "eslint": "^8.25.0",
     "eslint-config-prettier": "^8.5.0",
-    "eslint-plugin-jest": "^26.5.3",
+    "eslint-plugin-jest": "^27.1.1",
     "husky": "^8.0.1",
-    "jest": "^28.1.2",
+    "jest": "^29.1.2",
     "lint-staged": "^13.0.3",
-    "msw": "^0.43.0",
+    "msw": "^0.47.4",
     "prettier": "^2.7.1",
-    "ts-node": "^10.8.2",
-    "typescript": "^4.7.4"
+    "ts-node": "^10.9.1",
+    "typescript": "^4.8.4"
   }
 }
