--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "quick-start": "tsc && ./scripts/runLocal.sh",
     "test": "jest --colors",
     "typecheck": "tsc --noEmit",
-    "update": "ncu -u && npm i && npm audit fix --audit-level=none && npm run test && npm dedupe"
+    "update": "ncu -u --doctor && npm audit fix --audit-level=none && npm run test && npm dedupe"
   },
   "lint-staged": {
     "**/*.{js,jsx,ts,tsx}": [
@@ -37,31 +37,31 @@
     ]
   },
   "dependencies": {
-    "aws-sdk": "^2.1231.0",
-    "aws-xray-sdk-core": "^3.3.8",
-    "axios": "^1.1.2",
-    "axios-retry": "^3.3.1"
+    "aws-sdk": "^2.1359.0",
+    "aws-xray-sdk-core": "^3.5.0",
+    "axios": "^1.3.5",
+    "axios-retry": "^3.4.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.19.3",
-    "@babel/preset-env": "^7.19.3",
-    "@babel/preset-typescript": "^7.18.6",
-    "@types/aws-lambda": "^8.10.106",
+    "@babel/core": "^7.21.4",
+    "@babel/preset-env": "^7.21.4",
+    "@babel/preset-typescript": "^7.21.4",
+    "@types/aws-lambda": "^8.10.114",
     "@types/escape-html": "^1.0.2",
-    "@types/jest": "^29.1.2",
-    "@types/node": "^18.8.3",
-    "@typescript-eslint/eslint-plugin": "^5.39.0",
-    "@typescript-eslint/parser": "^5.39.0",
-    "babel-jest": "^29.1.2",
-    "eslint": "^8.25.0",
-    "eslint-config-prettier": "^8.5.0",
-    "eslint-plugin-jest": "^27.1.1",
-    "husky": "^8.0.1",
-    "jest": "^29.1.2",
-    "lint-staged": "^13.0.3",
-    "msw": "^0.47.4",
-    "prettier": "^2.7.1",
+    "@types/jest": "^29.5.0",
+    "@types/node": "^18.15.11",
+    "@typescript-eslint/eslint-plugin": "^5.58.0",
+    "@typescript-eslint/parser": "^5.58.0",
+    "babel-jest": "^29.5.0",
+    "eslint": "^8.38.0",
+    "eslint-config-prettier": "^8.8.0",
+    "eslint-plugin-jest": "^27.2.1",
+    "husky": "^8.0.3",
+    "jest": "^29.5.0",
+    "lint-staged": "^13.2.1",
+    "msw": "^1.2.1",
+    "prettier": "^2.8.7",
     "ts-node": "^10.9.1",
-    "typescript": "^4.8.4"
+    "typescript": "^5.0.4"
   }
 }
