--- a/package.json
+++ b/package.json
@@ -24,34 +24,34 @@
     "quick-start": "tsc && ./scripts/runLocal.sh",
     "test": "jest --colors",
     "typecheck": "tsc --noEmit",
-    "update": "ncu -u --doctor && npm audit fix --audit-level=none && npm run test && npm dedupe"
+    "update": "ncu --doctor --target minor --upgrade && npm audit fix --audit-level=none && npm run test && npm dedupe"
   },
   "dependencies": {
-    "aws-xray-sdk-core": "^3.5.0",
-    "axios": "^1.3.5",
-    "axios-retry": "^3.4.0"
+    "aws-xray-sdk-core": "^3.5.3",
+    "axios": "^1.6.5",
+    "axios-retry": "^3.9.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.21.4",
-    "@babel/preset-env": "^7.21.4",
-    "@babel/preset-typescript": "^7.21.4",
-    "@types/aws-lambda": "^8.10.114",
-    "@types/escape-html": "^1.0.2",
-    "@types/jest": "^29.5.0",
-    "@types/node": "^18.15.11",
-    "@typescript-eslint/eslint-plugin": "^5.59.0",
-    "@typescript-eslint/parser": "^5.59.0",
-    "babel-jest": "^29.5.0",
-    "eslint": "^8.38.0",
-    "eslint-config-prettier": "^8.8.0",
-    "eslint-plugin-jest": "^27.2.1",
+    "@babel/core": "^7.23.7",
+    "@babel/preset-env": "^7.23.8",
+    "@babel/preset-typescript": "^7.23.3",
+    "@types/aws-lambda": "^8.10.131",
+    "@types/escape-html": "^1.0.4",
+    "@types/jest": "^29.5.11",
+    "@types/node": "^18.19.6",
+    "@typescript-eslint/eslint-plugin": "^5.62.0",
+    "@typescript-eslint/parser": "^5.62.0",
+    "babel-jest": "^29.7.0",
+    "eslint": "^8.56.0",
+    "eslint-config-prettier": "^8.10.0",
+    "eslint-plugin-jest": "^27.6.3",
     "husky": "^8.0.3",
-    "jest": "^29.5.0",
-    "lint-staged": "^13.2.1",
-    "msw": "^1.2.1",
-    "prettier": "^2.8.7",
-    "ts-node": "^10.9.1",
-    "typescript": "^5.0.4"
+    "jest": "^29.7.0",
+    "lint-staged": "^13.3.0",
+    "msw": "^1.3.2",
+    "prettier": "^2.8.8",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.2.2"
   },
   "lint-staged": {
     "**/*.{js,jsx,ts,tsx}": [
