Disallow negated conditionals

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,7 +1,6 @@
 {
   "env": {
     "es2021": true,
-    "jest/globals": true,
     "node": true
   },
   "extends": ["eslint:recommended", "plugin:@typescript-eslint/recommended", "prettier"],
@@ -10,19 +9,19 @@
     "ecmaVersion": 12,
     "sourceType": "module"
   },
-  "plugins": ["@typescript-eslint", "jest"],
+  "plugins": ["@typescript-eslint"],
   "rules": {
-    "@typescript-eslint/no-unused-vars": ["error", { "varsIgnorePattern": "_" }],
     "@typescript-eslint/no-explicit-any": ["off"],
+    "@typescript-eslint/no-non-null-assertion": ["off"],
+    "@typescript-eslint/no-unused-vars": ["error", { "varsIgnorePattern": "_" }],
     "indent": ["error", 2],
     "linebreak-style": ["error", "unix"],
+    "no-negated-condition": ["error"],
     "quotes": ["error", "single", { "avoidEscape": true }],
     "semi": ["error", "never"],
     "sort-imports": ["error", { "allowSeparatedGroups": true, "ignoreCase": true }],
     "sort-keys": ["error", "asc", { "caseSensitive": false, "natural": false }],
+
     "sort-vars": ["error"]
-  },
-  "globals": {
-    "module": "readonly"
   }
 }
