--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -1,11 +1,5 @@
 name: Pipeline
 
-on:
-  push:
-    branches:
-      - 'master'
-      - 'feature**'
-
 env:
   PIPELINE_USER_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
   PIPELINE_USER_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
@@ -24,6 +18,12 @@ env:
   PROD_ARTIFACTS_BUCKET_EAST_1: dbowland-lambda-east-1
   PROD_ARTIFACTS_BUCKET_EAST_2: dbowland-lambda-east-2
   PROD_REGION: ${{ secrets.AWS_REGION }}
+  HUSKY: 0
+
+on: push
+
+permissions:
+  contents: write
 
 jobs:
   test:
@@ -33,10 +33,10 @@ jobs:
     steps:
       - name: Checkout latest code
         uses: actions/checkout@v4
-      - name: Install Node 18
-        uses: actions/setup-node@v3
+      - name: Install Node 20
+        uses: actions/setup-node@v4
         with:
-          node-version: 18.x
+          node-version: 20.x
       - name: Install and audit packages
         run: npm ci && npm audit --audit-level=high
         env:
@@ -53,16 +53,16 @@ jobs:
       - name: Checkout latest code
         uses: actions/checkout@v4
       - name: Install Python 3
-        uses: actions/setup-python@v4
+        uses: actions/setup-python@v5
         with:
           python-version: 3.8
       - name: Install AWS SAM
         uses: aws-actions/setup-sam@v2
 
-      - name: Install Node 18
-        uses: actions/setup-node@v3
+      - name: Install Node 20
+        uses: actions/setup-node@v4
         with:
-          node-version: 18.x
+          node-version: 20.x
       - name: Build TypeScript into Lambda
         run: npm run build
         env:
@@ -70,7 +70,7 @@ jobs:
       - run: sam build --template ${SAM_TEMPLATE} --use-container --container-env-var NODE_ENV=production
 
       - name: Assume the testing pipeline user role
-        uses: aws-actions/configure-aws-credentials@v1-node16
+        uses: aws-actions/configure-aws-credentials@v4
         with:
           aws-access-key-id: ${{ env.PIPELINE_USER_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ env.PIPELINE_USER_SECRET_ACCESS_KEY }}
@@ -112,16 +112,16 @@ jobs:
       - name: Checkout latest code
         uses: actions/checkout@v4
       - name: Install Python 3
-        uses: actions/setup-python@v4
+        uses: actions/setup-python@v5
         with:
           python-version: 3.8
       - name: Install AWS SAM
         uses: aws-actions/setup-sam@v2
 
-      - name: Install Node 18
-        uses: actions/setup-node@v3
+      - name: Install Node 20
+        uses: actions/setup-node@v4
         with:
-          node-version: 18.x
+          node-version: 20.x
       - name: Build resources
         run: |
           npm run build
@@ -130,7 +130,7 @@ jobs:
           HUSKY: 0
 
       - name: Assume the testing pipeline user role
-        uses: aws-actions/configure-aws-credentials@v1-node16
+        uses: aws-actions/configure-aws-credentials@v4
         with:
           aws-access-key-id: ${{ env.PIPELINE_USER_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ env.PIPELINE_USER_SECRET_ACCESS_KEY }}
@@ -147,7 +147,7 @@ jobs:
             --s3-prefix log-subscriber-test \
             --region ${TESTING_REGION} \
             --output-template-file packaged-testing-east-1.yaml
-      - uses: actions/upload-artifact@v3
+      - uses: actions/upload-artifact@v4
         with:
           name: packaged-testing-east-1.yaml
           path: packaged-testing-east-1.yaml
@@ -158,13 +158,13 @@ jobs:
             --s3-prefix log-subscriber-test \
             --region ${TESTING_REGION} \
             --output-template-file packaged-testing-east-2.yaml
-      - uses: actions/upload-artifact@v2
+      - uses: actions/upload-artifact@v4
         with:
           name: packaged-testing-east-2.yaml
           path: packaged-testing-east-2.yaml
 
       - name: Assume the prod pipeline user role
-        uses: aws-actions/configure-aws-credentials@v1
+        uses: aws-actions/configure-aws-credentials@v4
         with:
           aws-access-key-id: ${{ env.PIPELINE_USER_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ env.PIPELINE_USER_SECRET_ACCESS_KEY }}
@@ -182,7 +182,7 @@ jobs:
             --region ${PROD_REGION} \
             --output-template-file packaged-prod-east-1.yaml
 
-      - uses: actions/upload-artifact@v3
+      - uses: actions/upload-artifact@v4
         with:
           name: packaged-prod-east-1.yaml
           path: packaged-prod-east-1.yaml
@@ -193,7 +193,7 @@ jobs:
             --s3-prefix log-subscriber \
             --region ${PROD_REGION} \
             --output-template-file packaged-prod-east-2.yaml
-      - uses: actions/upload-artifact@v2
+      - uses: actions/upload-artifact@v4
         with:
           name: packaged-prod-east-2.yaml
           path: packaged-prod-east-2.yaml
@@ -207,20 +207,20 @@ jobs:
       - name: Checkout latest code
         uses: actions/checkout@v4
       - name: Install Python 3
-        uses: actions/setup-python@v4
+        uses: actions/setup-python@v5
         with:
           python-version: 3.8
       - name: Install AWS SAM
         uses: aws-actions/setup-sam@v2
-      - uses: actions/download-artifact@v3
+      - uses: actions/download-artifact@v4
         with:
           name: packaged-testing-east-1.yaml
-      - uses: actions/download-artifact@v3
+      - uses: actions/download-artifact@v4
         with:
           name: packaged-testing-east-2.yaml
 
       - name: Assume the testing pipeline user role
-        uses: aws-actions/configure-aws-credentials@v1-node16
+        uses: aws-actions/configure-aws-credentials@v4
         with:
           aws-access-key-id: ${{ env.PIPELINE_USER_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ env.PIPELINE_USER_SECRET_ACCESS_KEY }}
@@ -262,20 +262,20 @@ jobs:
       - name: Checkout latest code
         uses: actions/checkout@v4
       - name: Install Python 3
-        uses: actions/setup-python@v4
+        uses: actions/setup-python@v5
         with:
           python-version: 3.8
       - name: Install AWS SAM
         uses: aws-actions/setup-sam@v2
-      - uses: actions/download-artifact@v3
+      - uses: actions/download-artifact@v4
         with:
           name: packaged-prod-east-1.yaml
-      - uses: actions/download-artifact@v3
+      - uses: actions/download-artifact@v4
         with:
           name: packaged-prod-east-2.yaml
 
       - name: Assume the prod pipeline user role
-        uses: aws-actions/configure-aws-credentials@v1-node16
+        uses: aws-actions/configure-aws-credentials@v4
         with:
           aws-access-key-id: ${{ env.PIPELINE_USER_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ env.PIPELINE_USER_SECRET_ACCESS_KEY }}
@@ -315,10 +315,10 @@ jobs:
     steps:
       - name: Checkout latest code
         uses: actions/checkout@v4
-      - name: Install Node 18
-        uses: actions/setup-node@v3
+      - name: Install Node 20
+        uses: actions/setup-node@v4
         with:
-          node-version: 18.x
+          node-version: 20.x
       - name: Set git name and email
         run: |
           git config --local user.email "dbowland1+bot@gmail.com"
@@ -326,7 +326,4 @@ jobs:
       - name: Bump the minor version
         run: npm version minor
       - name: Push tag created by version bump
-        uses: ad-m/github-push-action@master
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          branch: ${{ github.ref }}
+        run: git push --follow-tags
