--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Lambda that subscribes to CloudWatch Log Group errors and forwards to SMS",
   "version": "1.12.0",
   "engines": {
-    "node": "^18.0.0"
+    "node": "^20.0.0"
   },
   "repository": {
     "type": "git",
@@ -18,8 +18,8 @@
     "build": "npm run clean && tsc && cp package*.json dist/ && cd dist/ && HUSKY=0 NODE_ENV=production npm ci",
     "clean": "rm -rf dist coverage && NODE_ENV=test npm ci",
     "deploy": "npm run build && ./scripts/deploy.sh",
-    "lint": "prettier --write . && eslint --fix . --resolve-plugins-relative-to .",
-    "prepare": "if [ \"$NODE_ENV\" != \"production\" ]; then husky install ; fi",
+    "lint": "prettier --write . && eslint --fix .",
+    "prepare": "husky",
     "start": "npm run build && npm run quick-start",
     "quick-start": "tsc && ./scripts/runLocal.sh",
     "test": "jest --colors",
@@ -29,7 +29,8 @@
   "dependencies": {
     "aws-xray-sdk-core": "^3.5.3",
     "axios": "^1.6.5",
-    "axios-retry": "^3.9.1"
+    "axios-retry": "^3.9.1",
+    "husky": "^9.1.3"
   },
   "devDependencies": {
     "@babel/core": "^7.23.7",
@@ -38,14 +39,13 @@
     "@types/aws-lambda": "^8.10.131",
     "@types/escape-html": "^1.0.4",
     "@types/jest": "^29.5.11",
-    "@types/node": "^18.19.6",
-    "@typescript-eslint/eslint-plugin": "^5.62.0",
-    "@typescript-eslint/parser": "^5.62.0",
+    "@types/node": "^20.14.13",
+    "@typescript-eslint/eslint-plugin": "^7.17.0",
+    "@typescript-eslint/parser": "^7.17.0",
     "babel-jest": "^29.7.0",
     "eslint": "^8.56.0",
     "eslint-config-prettier": "^8.10.0",
-    "eslint-plugin-jest": "^27.6.3",
-    "husky": "^8.0.3",
+    "eslint-plugin-jest": "^28.6.0",
     "jest": "^29.7.0",
     "lint-staged": "^13.3.0",
     "msw": "^1.3.2",
@@ -56,7 +56,7 @@
   "lint-staged": {
     "**/*.{js,jsx,ts,tsx}": [
       "prettier --write --ignore-unknown",
-      "eslint --resolve-plugins-relative-to . --fix",
+      "eslint --fix",
       "jest --colors --findRelatedTests --coverageThreshold '{}'"
     ],
     "**/*": [
