--- a/template.yaml
+++ b/template.yaml
@@ -38,8 +38,7 @@ Resources:
       Description: Processes error messages from log groups
       Architectures:
         - x86_64
-      Handler: handlers/log-group-processor.logGroupProcessorHandler
-      CodeUri: './dist'
+      Handler: src/handlers/log-group-processor.logGroupProcessorHandler
       Environment:
         Variables:
           SMS_API_KEY: !Ref SmsApiKey
@@ -57,6 +56,14 @@ Resources:
         'environment': !Ref Environment
       Timeout: 60
       Tracing: Active
+    Metadata:
+      BuildMethod: esbuild
+      BuildProperties:
+        Minify: true
+        Target: 'es2020'
+        Sourcemap: true
+        EntryPoints:
+          - src/handlers/log-group-processor.ts
 
   CloudWatchLambdaInvokePermission:
     Type: AWS::Lambda::Permission
